--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,11 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-primary" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link
+              Users
             </a>
             <div class="dropdown-menu bg-inverse border-0" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item text-primary" href="#">Action</a>
-              <a class="dropdown-item text-primary" href="#">Another action</a>
-              <a class="dropdown-item text-primary" href="#">Something else here</a>
+              <a class="dropdown-item text-primary" href="/users">Show users</a>
+              <a class="dropdown-item text-primary" routerLink="/users/create" routerLinkActive="active" href="#">Create user</a>
             </div>
           </li>
           <li class="nav-item">
