--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,11 @@
     <h2><a class="text-white" routerLink="/model" routerLinkActive="active">Bootstrap models</a></h2>
   </li>
   <li>
-    <h2><a class="text-white" routerLink="/user/form" routerLinkActive="active">Bootstrap form</a></h2>
+    <h2><a class="text-white" routerLink="/users/create" routerLinkActive="active">Bootstrap form</a></h2>
   </li> 
+  <li>
+    <h2 class="text-white">Users: {{count}}</h2>
+  </li>  
 </ul>
+
 
