--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,20 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link text-primary" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link text-primary" routerLink="/" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a href="#" class="nav-link text-primary" routerLink="/model">Models</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-primary" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Users
             </a>
             <div class="dropdown-menu bg-inverse border-0" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item text-primary" href="/users">Show users</a>
-              <a class="dropdown-item text-primary" routerLink="/users/create" routerLinkActive="active" href="#">Create user</a>
+              <a class="dropdown-item text-primary" routerLink="/users"  href="#" >Show users</a>
+              <a class="dropdown-item text-primary" routerLink="/users/create"  href="#">Create user</a>
+              <a class="dropdown-item text-primary" routerLink="/users/types" href="#" >Show types</a>
+              <a class="dropdown-item text-primary" routerLink="/users/types/create"  href="#" >Create type</a>
             </div>
           </li>
           <li class="nav-item">
