--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="container-fullwidth">
-  
-    <nav class="navbar  navbar-toggleable-md navbar-inverse bg-inverse">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,21 +16,21 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-primary" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Users
-            </a>
-            <div class="dropdown-menu bg-inverse border-0" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item text-primary" routerLink="/users"  href="#" >Show users</a>
-              <a class="dropdown-item text-primary" routerLink="/users/create"  href="#">Create user</a>
-              <a class="dropdown-item text-primary" routerLink="/users/types" href="#" >Show types</a>
-              <a class="dropdown-item text-primary" routerLink="/users/types/create"  href="#" >Create type</a>
+             Users
+           </a>
+            <div class="dropdown-menu bg-dark border-0" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item text-primary" routerLink="/users" href="#">Show users</a>
+              <a class="dropdown-item text-primary" routerLink="/users/create" href="#">Create user</a>
+              <a class="dropdown-item text-primary" routerLink="/users/types" href="#">Show types</a>
+              <a class="dropdown-item text-primary" routerLink="/users/types/create" href="#">Create type</a>
             </div>
           </li>
           <li class="nav-item">
             <a class="nav-link text-primary" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-primary" href="#">Pricing</a>
-          </li> 
+            <a class="nav-link text-primary" href="/admin">admin</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -39,6 +39,3 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-
-
-
