--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    background-color: #0275D8;
+
+body {
+  background-color: #0275D8;
 }
-p{
-    margin: 0;
+
+p {
+  margin: 0;
 }
-.padding-tb{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+
+.padding-tb {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
-.vertical-margin{
-    margin-top:1rem;
+
+.vertical-margin {
+  margin: 1rem 0;
 }
-.section-title{
-    margin: 1rem auto;
-    color:gray;
+
+.section-title {
+  margin: 1rem auto;
+  color: gray;
 }
