--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-primary" href="#">{{title}}</a>
+      <img class="navbar-brand text-primary" src="/app/assets/regent-logo.svg"/>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -26,10 +26,15 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-primary" href="#">Features</a>
+            <a class="nav-link text-primary" href="/admin">Admin</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-primary" href="/admin">admin</a>
+          <li class="nav-item dropdown">
+            <a href="http://example.com" class="nav-link dropdown-toggle text-primary" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Generator
+            </a>
+            <div class="dropdown-menu bg-dark border-0" aria-labelledby="navbarDropdownMenuLink2">
+              <a href="#" class="dropdown-item text-primary" routerLink="/gen/entity">Entity</a>
+            </div>
           </li>
         </ul>
       </div>
