--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <img class="navbar-brand text-primary" src="/app/assets/regent-logo.svg"/>
+      <img class="navbar-brand text-primary" src="/app/assets/images/regent-logo.svg"/>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -40,7 +40,7 @@
       </div>
     </nav>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
 </div>
