--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link text-primary" href="/admin">Admin</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="/systemmodels">SystemModels</a>
+          </li>
           <li class="nav-item dropdown">
             <a href="http://example.com" class="nav-link dropdown-toggle text-primary" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Generator
