--- a/src/app/components/entity-gen/entity-gen.component.css
+++ b/src/app/components/entity-gen/entity-gen.component.css
@@ -8,13 +8,22 @@
     background-color: #FFFBF7;
     box-shadow: 2px 2px 5px #444444;
 }
+.shadow-block{
+    
+}
 .inner-block{
+    
+}
+.bordered{
     margin: 1rem 0;
     border-radius: 5px;
     text-align: center;
-    background-color: #007bff;
     border: 1px solid #00356E;
 }
+
+.bg-blue{
+    background-color: #007bff;
+}
 .ex-over{
-    background-color:green;
+    background-color:green !important;
 }
