--- a/src/app/components/system-models/system-models.component.html
+++ b/src/app/components/system-models/system-models.component.html
@@ -1,32 +1,43 @@
 <div class="editor">
 
   <div class="row">
-    <ul class="col list-group module-group" [dragula]='"another-bag"' [dragulaModel]='modules'>
-      <li *ngFor='let module of modules' class="list-group-item list-group-item-action list-group-item-dark module-item" [ngClass]="{'active': selectedModule == module}"
-        (click)="selectModule(module)">
-        <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
-      </li>
-    </ul>
 
-    <ul class="col list-group entity-group" [dragula]='"another-bag"' *ngIf="selectedModule" [dragulaModel]='entities'>
-      <li *ngFor='let entity of selectedModule.entities' class="list-group-item list-group-item-action list-group-item-success entity-item"
-        [ngClass]="{'active': selectedEntity == entity}" (click)="selectEntity(entity)">
-        <i class="fa fa-sticky-note" aria-hidden="true"></i> {{entity.name}}
-      </li>
-    </ul>
+    <div class="col">
+      <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
+        <li *ngFor='let module of modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
+          [ngClass]="{'active': selectedModuleId == i}" (click)="selectModule(i)">
+          <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
+        </li>
+      </ul>
+    </div>
 
-    <ul class="col list-group field-group" [dragula]='"another-bag"' *ngIf="selectedEntity" [dragulaModel]='fields'>
-      <li *ngFor='let field of selectedEntity.fields' class="list-group-item list-group-item-action field-item" [ngClass]="{'active': selectedField == field}"
-        (click)="selectField(field)">
-        <span class="badge badge-primary badge-right">String</span> {{field.name}}
-      </li>
-    </ul>
+    <div class="col">
+      <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selectedModuleId].entities'>
+        <li *ngFor='let entity of modules[selectedModuleId].entities; let i = index' class="list-group-item list-group-item-action list-group-item-success entity-item"
+          [ngClass]="{'active': selectedEntityId == i}" (click)="selectEntity(i)">
+          <i class="fa fa-sticky-note" aria-hidden="true"></i> {{entity.name}}
+        </li>
+      </ul>
+    </div>
 
-    <ul class="col list-group property-group" [dragula]='"another-bag"' *ngIf="selectedField" [dragulaModel]='properties'>
-      <li *ngFor='let property of selectedField.properties' class="list-group-item list-group-item-action property-item">
-        {{property}}
-      </li>
-    </ul>
+    <div class="col">
+      <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields'>
+        <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields; let i = index' class="list-group-item list-group-item-action field-item"
+          [ngClass]="{'active': selectedFieldId == i}" (click)="selectField(i)">
+          <span class="badge badge-primary badge-right">String</span> {{field.name}}
+        </li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties'>
+        <li *ngFor='let property of modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties; let i = index'
+          class="list-group-item list-group-item-action property-item">
+          {{property}}
+        </li>
+      </ul>
+    </div>
+
   </div>
 </div>
 
@@ -41,3 +52,23 @@
 <span class="badge badge-info">Info</span>
 <span class="badge badge-light">Light</span>
 <span class="badge badge-dark">Dark</span>
+
+<!--
+<div class="row">
+
+  <ul class="col list-group module-group">
+    <li *ngFor='let module of modules' class="list-group-item list-group-item-action list-group-item-dark module-item">{{module.name}}</li>
+  </ul>
+
+  <ul class="col list-group entity-group">
+    <li *ngFor='let entity of modules[selectedModuleId].entities' class="list-group-item list-group-item-action list-group-item-success entity-item">{{entity.name}}</li>
+  </ul>
+
+  <ul class="col list-group field-group">
+    <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields' class="list-group-item list-group-item-action field-item">{{field.name}} </li>
+  </ul>
+
+</div>
+<pre>{{modules | json}}</pre>
+-->
+
