--- a/src/app/components/entity-gen/entity-gen.component.html
+++ b/src/app/components/entity-gen/entity-gen.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+
   <div class="block bg-primary">
     <div class="row">
       <div class="col">
@@ -16,6 +17,7 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col">
         <div class="form-group">
@@ -25,10 +27,13 @@
     </div>
 
   </div>
+
+
   <div class='wrapper row  text-light'>
     <div class='container block col container-models' [dragula]='"bag-one"' [dragulaModel]='many'>
       <div *ngFor='let one of many' class="inner-block bordered acceptable bg-primary">{{one.name}}</div>
     </div>
+    
     <div class='wrapper block col form-group bg-primary' [dragula]='"bag-one"' [dragulaModel]='many2'>
       <div *ngFor='let one of many2' class="inner-block removable">
         <div class="form-group" *ngIf="one.type==='text' || one.type==='password'">
@@ -48,9 +53,6 @@
               <input [type]="one.type" [name]="one.name" [value]="value">{{value}}
             </div>
           </div>
-
-
-
         </div>
         <div class="wrapper block row bg-primary" *ngIf="one.type==='row'" [dragula]='"bag-one"' [dragulaModel]='one.many'>
           <div class="inner-block removable col" *ngFor='let another of one.many'>
@@ -76,5 +78,14 @@
         </div>
       </div>
     </div>
+  
   </div>
-  <pre>{{many2 | json}}</pre>
+  <div class="row">
+    <div class="col">
+      <pre>{{many | json}}</pre>
+    </div>
+    <div class="col">
+      <pre>{{many2 | json}}</pre>
+    </div>
+  </div>
+  
