--- a/src/app/components/system-models/system-models.component.css
+++ b/src/app/components/system-models/system-models.component.css
@@ -14,6 +14,13 @@ pre{
    max-width: 25%;
 }
 
+.col-item h3{
+    font-family:Oswald;
+    color: #556270;
+    user-select: none; 
+    cursor: default;
+}
+
 .btn-center{
     margin: 0 auto;
     display: block;
@@ -44,7 +51,9 @@ pre{
 .entity-group,
 .field-group,
 .property-group {
-    padding: 0 0 10px;
+    /*padding: 0 0 10px;*/
+    padding: 5px;
+    background: rgba(0,0,0,.05);
 }
 
 /******************* ITEMS *******************/
@@ -53,6 +62,8 @@ pre{
     font-size: 1.3em;
     
 }
+
+
 
 .entity-item{
     padding: .5em 1em;
