--- a/src/app/components/system-models/system-models.component.html
+++ b/src/app/components/system-models/system-models.component.html
@@ -1,88 +1,171 @@
-<div class="editor">
+<section class="editor">
+  <header>
+    <h2 (click)="isCollapsed = !isCollapsed">Static no html |{{application.name}}|</h2>
+    {{application | json}}
+    <div [collapse]="isCollapsed" class="card card-block card-header">
 
-  <div class="row">
 
-    <div class="col col-item">
-      <h3>Modules</h3>
-      <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
-        <li *ngFor='let module of modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
-          [ngClass]="{'active': selectedModuleId == i}" (click)="selectModule(i)">
-          <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col form-group row">
+          <label for="staticEmail" class="col-sm-4 col-form-label">Backend</label>
+          <div class="col-sm-8">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col form-group row">
+          <label for="inputPassword" class="col-sm-4 col-form-label">Password</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col form-group row">
+          <label for="staticEmail" class="col-sm-4 col-form-label">Email</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="staticEmail" value="email@example.com">
+          </div>
+        </div>
+        <div class="col form-group row">
+          <label for="inputPassword" class="col-sm-4 col-form-label">Password</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <div class="btn-group-center">
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-add" [popover]="popTemplate" triggers="focus">
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          </button>
-          <button type="button" class="btn btn-lib" [popover]="popTemplate1" triggers="focus">
-            <i class="fa fa-book" aria-hidden="true"></i>
-          </button>
-          
+  </header>
+
+  <main>
+
+    <div *ngFor='let vehicle of vehicles | async'>
+      {{vehicle.name}}
+  </div>
+
+    <tabset>
+      <tab heading="Core" customClass="tab-dark">
+
+        <div class="row">
+
+          <div class="col col-item">
+            <h3>Modules</h3>
+            <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
+              <li *ngFor='let module of modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
+                [ngClass]="{'active': selectedModuleId == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
+                <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
+              </li>
+            </ul>
+
+
+
+
+            <app-list-component bag="bag1" [listItems]="copyModules"></app-list-component>
+
+
+
+
+
+          </div>
+
+          <app-list-draggable [selectedItem]="selectedEntityId" title="Entities" bag="bag2" [listItems]="modules[selectedModuleId].entities"></app-list-draggable>
+         
+
+<!--           
+          <div class="col col-item" >
+            <h3>Entities</h3>
+            <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selectedModuleId].entities'>
+              <li *ngFor='let entity of modules[selectedModuleId].entities; let i = index' class="list-group-item list-group-item-action entity-item"
+                [ngClass]="{'active': selectedEntityId == i}" (click)="selectEntity(i)">
+                <i class="fa fa-folder" aria-hidden="true"></i> {{entity.name}}
+              </li>
+            </ul>
+            <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+          </div> -->
+
+          <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId]">
+            <h3>Fields</h3>
+            <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields'>
+              <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields; let i = index' class="list-group-item list-group-item-action field-item"
+                [ngClass]="{'active': selectedFieldId == i}" (click)="selectField(i)">
+
+                <i class="fa fa-sticky-note" aria-hidden="true"></i>
+
+                <span class="badge badge-right icon-field" [ngClass]="'type-' + field.type">
+                                    <i class="fa" aria-hidden="true" [ngClass]="type(field.type).icon"></i> {{field.type}}
+                                </span> {{field.name}}
+              </li>
+            </ul>
+            <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+          </div>
+
+          <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId]">
+            <h3>Properties</h3>
+            <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties'>
+              <li *ngFor='let property of modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties; let i = index'
+                class="list-group-item list-group-item-action property-item">
+                {{property}}
+              </li>
+            </ul>
+            <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+
+
+
+          </div>
+
         </div>
 
-        <accordion [closeOthers]="true">
-            <accordion-group heading="Header" class="card">
-              This content is straight in the template.
-            </accordion-group>
-            <accordion-group heading="Content 1">
-              <p>Content 1</p>
-            </accordion-group>
-            <accordion-group heading="Content 2">
-              <p>Content 2</p>
-            </accordion-group>
-          </accordion>
+
+      </tab>
+      <tab heading="Form" customClass="tab-dark">Static content 1</tab>
+      <tab heading="Screen" customClass="tab-dark">Static content 2</tab>
+      <tab heading="Menu" customClass="tab-dark">Static content 2</tab>
+      <tab heading="Theme" customClass="tab-dark">Static content 2</tab>
+
+      <tab customClass="tab-dark">
+        <ng-template tabHeading>
+          Alert!
+        </ng-template>
+        I've got an HTML heading, and a select callback. Pretty cool!
+      </tab>
+
+    </tabset>
 
 
-      </div>  
-      
+
+  </main>
+  <aside [ngClass]="{'active': aside}">
 
 
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input class="form-control form-control-sm" type="text" [(ngModel)]="modules[selectedModuleId].name">
     </div>
 
-    <div class="col col-item">
-      <h3>Entities</h3>
-      <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selectedModuleId].entities'>
-        <li *ngFor='let entity of modules[selectedModuleId].entities; let i = index' class="list-group-item list-group-item-action entity-item"
-          [ngClass]="{'active': selectedEntityId == i}" (click)="selectEntity(i)">
-          <i class="fa fa-folder" aria-hidden="true"></i> {{entity.name}}
-        </li>
-      </ul>
-      <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-secondary">Left</button>
+      <button type="button" class="btn btn-warning">Clear Contents</button>
+      <button type="button" class="btn btn-danger">Remove</button>
     </div>
 
-    <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId]">
-      <h3>Fields</h3>
-      <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields'>
-        <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields; let i = index' class="list-group-item list-group-item-action field-item"
-          [ngClass]="{'active': selectedFieldId == i}" (click)="selectField(i)">
+  </aside>
+</section>
 
-          <i class="fa fa-sticky-note" aria-hidden="true"></i>
-          
-          <span class="badge badge-right icon-field" [ngClass]="'type-' + field.type">
-              <i class="fa" aria-hidden="true" [ngClass]="type(field.type).icon"></i> {{field.type}}
-          </span> {{field.name}}
-        </li>
-      </ul>
-      <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-    </div>
 
-    <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId]">
-      <h3>Properties</h3>
-      <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties'>
-        <li *ngFor='let property of modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties; let i = index'
-          class="list-group-item list-group-item-action property-item">
-          {{property}}
-        </li>
-      </ul>
-      <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+<!--
+<div class="editor">
 
-      
-
-    </div>
-
-  </div>
+  
 </div>
 
 
@@ -113,9 +196,9 @@
 
 
 
-<pre>{{modules | json}}</pre>
 
-<!--
+
+
 <div class="row">
 
   <ul class="col list-group module-group">
@@ -133,3 +216,8 @@
 </div>
 
 -->
+
+
+
+<!-- 
+<pre>{{modules | json}}</pre> -->
