--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,11 @@
             <a class="nav-link text-primary" href="/admin">Admin</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-primary" href="/dynamicel">DynamicEl</a>
+          </li>
+          
+
+          <li class="nav-item">
             <a class="nav-link text-primary" href="/systemmodels">SystemModels</a>
           </li>
           <li class="nav-item dropdown">
