--- a/src/app/components/system-models/system-models.component.html
+++ b/src/app/components/system-models/system-models.component.html
@@ -58,29 +58,29 @@
 
         <div class="row">
 
-{{selectedModuleId}}
+{{selected.moduleId}}
 
-            <app-list-draggable #bag1 [(selectedItem)]="selectedModuleId" title="Modules" bag="bag1" [listItems]="application.modules">
+            <app-list-draggable #bag1 [selected]="selected" selectedProp="moduleId" title="Modules" bag="bag1" [listItems]="application.modules">
                 <app-list-component bag="bag1" [listItems]="copyModules"></app-list-component>
             </app-list-draggable>
             
 
-            <span *ngIf="application.modules[selectedModuleId].entities" >
-              <app-list-draggable #bag2 [(selectedItem)]="selectedEntityId" title="Entities" bag="bag2" [listItems]="application.modules[selectedModuleId].entities">
+            <span *ngIf="application.modules[selected.moduleId].entities" >
+              <app-list-draggable #bag2 [selected]="selected" selectedProp="entityId" title="Entities" bag="bag2" [listItems]="application.modules[selected.moduleId].entities">
                   <app-list-component bag="bag2" [listItems]="copyModules"></app-list-component>
               </app-list-draggable>
             </span>
 
-              <span *ngIf="application.modules[selectedModuleId].entities && application.modules[selectedModuleId].entities[selectedEntityId].fields" >
+              <span *ngIf="application.modules[selected.moduleId].entities && application.modules[selected.moduleId].entities[selected.entityId].fields" >
               
-              <app-list-draggable  #bag3 [(selectedItem)]="selectedFieldId" title="Fields" bag="bag3" [listItems]="application.modules[selectedModuleId].entities[selectedEntityId].fields">
+              <app-list-draggable  #bag3 [selected]="selected" selectedProp="fieldId" title="Fields" bag="bag3" [listItems]="application.modules[selected.moduleId].entities[selected.entityId].fields">
                 <app-list-component bag="bag3" [listItems]="copyModules"></app-list-component>
               </app-list-draggable>
               
             </span> 
             
-               <span *ngIf="application.modules[selectedModuleId].entities && application.modules[selectedModuleId].entities[selectedEntityId].fields && application.modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties" >
-              <app-list-draggable #bag4 [(selectedItem)]="selectedPropertyId" title="Properties" bag="bag4" [listItems]="application.modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties">
+               <span *ngIf="application.modules[selected.moduleId].entities && application.modules[selected.moduleId].entities[selected.entityId].fields && application.modules[selected.moduleId].entities[selected.entityId].fields[selected.fieldId].properties" >
+              <app-list-draggable #bag4 [selected]="selected" selectedProp="propertyId" title="Properties" bag="bag4" [listItems]="application.modules[selected.moduleId].entities[selected.entityId].fields[selected.fieldId].properties">
                   <app-list-component bag="bag4" [listItems]="copyModules"></app-list-component>
               </app-list-draggable>
             </span>
@@ -92,7 +92,7 @@
             <h3>Modules</h3>
             <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
               <li *ngFor='let module of application.modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
-                [ngClass]="{'active': selectedModuleId == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
+                [ngClass]="{'active': selected.moduleId == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
                 <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
               </li>
             </ul>
@@ -104,7 +104,7 @@
             <h3>Modules</h3>
             <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
               <li *ngFor='let module of modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
-                [ngClass]="{'active': selectedModuleId == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
+                [ngClass]="{'active': selected.moduleId == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
                 <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
               </li>
             </ul>
@@ -117,9 +117,9 @@
 
           <div class="col col-item" >
             <h3>Entities</h3>
-            <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selectedModuleId].entities'>
-              <li *ngFor='let entity of modules[selectedModuleId].entities; let i = index' class="list-group-item list-group-item-action entity-item"
-                [ngClass]="{'active': selectedEntityId == i}" (click)="selectEntity(i)">
+            <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selected.moduleId].entities'>
+              <li *ngFor='let entity of modules[selected.moduleId].entities; let i = index' class="list-group-item list-group-item-action entity-item"
+                [ngClass]="{'active': selected.entityId == i}" (click)="selectEntity(i)">
                 <i class="fa fa-folder" aria-hidden="true"></i> {{entity.name}}
               </li>
             </ul>
@@ -127,11 +127,11 @@
           </div> 
        
           
-          <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId]">
+          <div class="col col-item" *ngIf="modules[selected.moduleId].entities[selected.entityId]">
             <h3>Fields</h3>
-            <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields'>
-              <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields; let i = index' class="list-group-item list-group-item-action field-item"
-              [ngClass]="{'active': selectedFieldId == i}" (click)="selectField(i)">
+            <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selected.moduleId].entities[selected.entityId].fields'>
+              <li *ngFor='let field of modules[selected.moduleId].entities[selected.entityId].fields; let i = index' class="list-group-item list-group-item-action field-item"
+              [ngClass]="{'active': selected.fieldId == i}" (click)="selectField(i)">
               
               <i class="fa fa-sticky-note" aria-hidden="true"></i>
               
@@ -143,10 +143,10 @@
           <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
         </div>
         
-        <div class="col col-item" *ngIf="modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId]">
+        <div class="col col-item" *ngIf="modules[selected.moduleId].entities[selected.entityId].fields[selected.fieldId]">
           <h3>Properties</h3>
-          <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties'>
-            <li *ngFor='let property of modules[selectedModuleId].entities[selectedEntityId].fields[selectedFieldId].properties; let i = index'
+          <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selected.moduleId].entities[selected.entityId].fields[selected.fieldId].properties'>
+            <li *ngFor='let property of modules[selected.moduleId].entities[selected.entityId].fields[selected.fieldId].properties; let i = index'
             class="list-group-item list-group-item-action property-item">
             {{property}}
           </li>
@@ -184,7 +184,7 @@
 
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input class="form-control form-control-sm" type="text" [(ngModel)]="modules[selectedModuleId].name">
+      <input class="form-control form-control-sm" type="text" [(ngModel)]="modules[selected.moduleId].name">
     </div>
 
     <div class="btn-group" role="group" aria-label="Basic example">
@@ -241,11 +241,11 @@
   </ul>
 
   <ul class="col list-group entity-group">
-    <li *ngFor='let entity of modules[selectedModuleId].entities' class="list-group-item list-group-item-action list-group-item-success entity-item">{{entity.name}}</li>
+    <li *ngFor='let entity of modules[selected.moduleId].entities' class="list-group-item list-group-item-action list-group-item-success entity-item">{{entity.name}}</li>
   </ul>
 
   <ul class="col list-group field-group">
-    <li *ngFor='let field of modules[selectedModuleId].entities[selectedEntityId].fields' class="list-group-item list-group-item-action field-item">{{field.name}} </li>
+    <li *ngFor='let field of modules[selected.moduleId].entities[selected.entityId].fields' class="list-group-item list-group-item-action field-item">{{field.name}} </li>
   </ul>
 
 </div>
