--- a/src/app/components/dynamic-el/dynamic-el.component.html
+++ b/src/app/components/dynamic-el/dynamic-el.component.html
@@ -1,3 +1,3 @@
-<template #alertContainer></template>
-<button (click)="createComponent('success')">Create success alert</button>
-<button (click)="createComponent('danger')">Create danger alert</button>
+<ng-template #target></ng-template>
+<button (click)="createComponent(1)">Create component type 1</button>
+<button (click)="createComponent(2)">Create component type 2</button>
